kadu (0.6.6~beta16-1) unstable; urgency=low

  * New upstream release
  * Added code.google.com to debian/watch
  * Refreshed debian/patches/02-.config.patch
  * Removed 05-panelkadu_no-strict-aliasing.patch, since panelkadu's
    been fixed upstream
  * Removed libcurl4-gnutls-dev from Build-Depends, since it's no longer
    needed

 -- Patryk Cisek <patryk@debian.org>  Wed, 16 Feb 2011 16:44:58 +0100

kadu (0.6.6~beta15-1) unstable; urgency=low

  * New upstream release
  * Bumped Standards-Version
  * Added dependency on libqt4-sql-sqlite for kadu package to make history
    module work properly
  * Updated Kadu Team members list in debian/copyright
  * Update of clean target in debian/rules: debian/alsa-stamp gets
    removed as well
  * Added metadata to debian/patches to make them comply DEP3
    http://dep.debian.net/deps/dep3
  * Updated debian/patches/* make them fit to new upstream version
  * Minor updates to debian/patches/* to make them fit new source
  * Setting 755 on /usr/share/kadu/themes/icons/oxygen/src/rebuild-
    statuses.sh
  * Updated external modules to their newest upstream versions
  * Added debian/patches/05-panelkadu_no-strict-aliasing.patch to get
    rid of compilation warning, which results in an error thanks to
    "-Werror" compilation flag

 -- Patryk Cisek <patryk@debian.org>  Fri, 11 Feb 2011 11:18:52 +0100

kadu (0.6.5.4.ds1-1) unstable; urgency=low

  * Added missing copyright notices about dbus and pajacyk modules to
    debian/copyright
  * Updated year ranges in debian/copyright from ...-2009 to ...-2010
  * Standards-Version to 3.8.4
  * Migrated to 3.0 (quilt) format
  * Set fake 0.6.5.4.ds1 version to simulate new upstream release.

 -- Patryk Cisek <patryk@debian.org>  Sun, 20 Jun 2010 12:00:02 +0000

kadu (0.6.5.4-1) unstable; urgency=low

  * New upstream release
  * Refreshed patches in debian/patches to code changes since last stable
    release of Kadu