@@ -8,9 +8,6 @@ if [ "$1" = "copy" ]; then
     for i in externalthemes/emoticons/*; do
         cp -r $i varia/themes/emoticons
     done
-    for i in externalthemes/icons/*; do
-        cp -r $i varia/themes/icons
-    done
     for i in externalthemes/sounds/*; do
         cp -r $i varia/themes/sounds
     done
@@ -21,9 +18,6 @@ elif [ "$1" = "remove" ]; then
 
     for i in externalthemes/emoticons/*; do
         rm -rf varia/themes/emoticons/${i##*/}
-    done
-    for i in externalthemes/icons/*; do
-        rm -rf varia/themes/icons/${i##*/}
     done
     for i in externalthemes/sounds/*; do
         rm -rf varia/themes/sounds/${i##*/}
