@@ -7,8 +7,10 @@ kadu (0.6.6~beta16-1) unstable; urgency=low
     been fixed upstream
   * Removed libcurl4-gnutls-dev from Build-Depends, since it's no longer
     needed
+  * debian/handle_external.sh: externalthemes/icons is no longer
+    taken care of.
 
- -- Patryk Cisek <patryk@debian.org>  Wed, 16 Feb 2011 16:44:58 +0100
+ -- Patryk Cisek <patryk@debian.org>  Wed, 16 Feb 2011 17:14:29 +0100
 
 kadu (0.6.6~beta15-1) unstable; urgency=low
 
